# lattice-symmetries

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile-mcss  LICENSE  Makefile  README.md  Setup.hs  benchmark.c  cabal.project  cabal.project.local  conda-ci-devel.yml  conda-ci-linux.yml  conda-ci-osx.yml  conda-devel-linux.yml  conda-devel-osx.yml  conda-devel.yml  create_bindist.sh  flake.nix  lattice-symmetries-haskell.cabal  main.c  mcss-conf.py  nix
app/: Example01.hs
benchmark/: 01_basis_construction.py  01_basis_construction.tex  02_operator_application.py  02_operator_application.tex  Makefile  README.md  cast_basis.py  micro_operator_application.py  systems.py
benchmarks/: benchmark_ls.py
c/: Makefile  reference.c
cbits/: csr.c  csr.h  helpers.c  helpers.h  indexing.c  init.c  lattice_symmetries_haskell.h  reference.c  reference.h
chapel/: Makefile  default.nix  ffi.nix  matrix-vector-product.nix  overlay.nix
cmake/: CompilerWarnings.cmake  Dependencies.cmake  StaticAnalyzers.cmake  lattice_symmetries.pc.in
conda/: build.sh  conda_build_config.yaml  meta.yaml
docs/: Parsing.md
example/: systems.py  unpack_basis.py
haskell/: cabal.project.local  fourmolu.yaml  lattice-symmetries-haskell.cabal  lattice_symmetries_functions.h  overlay.nix  profiling.nix
haskell/app/: Main.hs  Parsing.hs
haskell/cbits/: init.c
haskell/lib/: ForeignLibrary.hs  HeaderFileGeneration.hs
haskell/src/LatticeSymmetries/: Algebra.hs  Automorphisms.hs  Basis.hs  Benes.hs  BitString.hs  ComplexRational.hs  Context.hs  Conversion.hs  Dense.hs  Expr.hs  FFI.hs  Generator.hs  Group.hs  Lowering.hs  NonbranchingTerm.hs  Operator.hs  Parser.hs  Permutation.hs  Some.hs  Utils.hs  Yaml.hs
haskell/test/: Spec.hs  Utils.hs
haskell/test/LatticeSymmetries/: AutomorphismsSpec.hs  BenesSpec.hs  BitStringSpec.hs  ComplexRationalSpec.hs  ConversionSpec.hs  ExprSpec.hs  GeneratorSpec.hs  GroupSpec.hs  LoweringSpec.hs  OperatorSpec.hs  ParserSpec.hs  PermutationSpec.hs
kernels/: Makefile  binary_search.c  default.nix  generator.cpp  indexing.c  kernels.c  kernels.h  lattice_symmetries_haskell.h  lattice_symmetries_types.h  overlay.nix  reference.c
kernels/v2/: CMakeLists.txt  default.nix  indexing.c  kernels_v2.cpp  lattice_symmetries_types.h  main.cpp  reference.c
lib/: ForeignLibrary.hs  HeaderFileGeneration.hs
nix/: filter_mpi_warnings.patch  slepc.nix
paper/: Makefile  paper.bib  paper.md
profile/: CMakeLists.txt  README.md  main.c  main.py
python/: overlay.nix  run_tests.py  setup.py  tests.py  tutorial.md
src/: LatticeSymmetries.hs  basis.cpp  basis.hpp  batched.c  bits.hpp  cache.cpp  cache.hpp  dispatcher.c  error_handling.c  error_handling.cpp  error_handling.hpp  group.cpp  group.hpp  intrusive_ptr.hpp  kernels.cpp  kernels.hpp  macros.hpp  network.cpp  network.hpp  operator.cpp  operator.hpp  permutation.cpp  permutation.hpp  state_info.cpp  state_info.hpp  symmetry.cpp  symmetry.hpp
src/halide/: CMakeLists.txt  generator.cpp  kernels.cpp  kernels.hpp
template/: flake.nix  (+1 more)
test/: CMakeLists.txt  Spec.hs  generate_quspin.py
test/01_spin_kagome/: hamiltonian.yaml
test/01_spin_kagome/HPhi/: calcmod.def  coulombinter.def  exchange.def  greenone.def  greentwo.def  hund.def  lattice.gp  locspn.def  modpara.def  pair.def  stan.in
test/02_spin_ladder_DM/: hamiltonian.yaml
test/02_spin_ladder_DM/HPhi/: calcmod.def  coulombinter.def  exchange.def  greenone.def  greentwo.def  hund.def  lattice.gp  locspn.def  modpara.def  pair.def  stan.in  trans.def
test/03_spin_hcor/: hamiltonian.yaml
test/03_spin_hcor/HPhi/: coulombinter.def  exchange.def  greentwo.def  hund.def  lattice.gp  locspn.def  modpara.def  namelist.def  pair.def  pairlift.def  stan.in  trans.def
test/04_hubbard_square/: hamiltonian.yaml
test/04_hubbard_square/HPhi/: calcmod.def  greenone.def  greentwo.def  lattice.gp  locspn.def  modpara.def  pair.def  stan.in
test/05_hubbard_tri/: hamiltonian.yaml
test/05_hubbard_tri/HPhi/: calcmod.def  coulombintra.def  greenone.def  greentwo.def  lattice.gp  modpara.def  pair.def  stan.in  trans.def
test/LatticeSymmetries/: BenesSpec.hs  BitStringSpec.hs  ComplexRationalSpec.hs  DenseSpec.hs  GroupSpec.hs  NonbranchingTermSpec.hs  ParserSpec.hs
test/random_quspin/: test_10_0_10_40_arrays.json  test_10_0_10_40_expr.json  test_10_0_None_[3, 2, 1, 9, 0, 8, 6, 7, 5, 4]_2_expr.json  test_10_0_None_arrays.json  test_10_0_None_expr.json  test_10_10_10_40_arrays.json  test_10_10_10_40_expr.json  test_10_10_None_[3, 4, 6, 9, 2, 5, 1, 8, 7, 0]_8_expr.json  test_10_10_None_[9, 7, 1, 6, 5, 0, 8, 4, 3, 2]_17_expr.json  test_10_10_None_[9, 7, 1, 6, 5, 0, 8, 4, 3, 2]_3_expr.json  test_10_10_None_arrays.json  test_10_10_None_expr.json  test_10_1_10_40_arrays.json  test_10_1_10_40_expr.json  test_10_1_None_[3, 4, 6, 9, 2, 5, 1, 8, 7, 0]_5_expr.json  test_10_1_None_arrays.json  test_10_1_None_expr.json  test_10_2_10_40_arrays.json  test_10_2_10_40_expr.json  test_10_2_None_[9, 7, 1, 6, 5, 0, 8, 4, 3, 2]_9_arrays.json  test_10_2_None_[9, 7, 1, 6, 5, 0, 8, 4, 3, 2]_9_expr.json  test_10_2_None_arrays.json  test_10_2_None_expr.json  test_10_3_10_40_arrays.json  test_10_3_10_40_expr.json  test_10_3_None_[3, 2, 1, 9, 0, 8, 6, 7, 5, 4]_1_arrays.json  test_10_3_None_[3, 2, 1, 9, 0, 8, 6, 7, 5, 4]_1_expr.json  test_10_3_None_[3, 4, 6, 9, 2, 5, 1, 8, 7, 0]_11_arrays.json  test_10_3_None_[3, 4, 6, 9, 2, 5, 1, 8, 7, 0]_11_expr.json  test_10_3_None_arrays.json  test_10_3_None_expr.json  test_10_4_10_40_arrays.json  test_10_4_10_40_expr.json  test_10_4_None_[3, 2, 1, 9, 0, 8, 6, 7, 5, 4]_0_arrays.json  test_10_4_None_[3, 2, 1, 9, 0, 8, 6, 7, 5, 4]_0_expr.json  test_10_4_None_[3, 4, 6, 9, 2, 5, 1, 8, 7, 0]_8_arrays.json  test_10_4_None_[3, 4, 6, 9, 2, 5, 1, 8, 7, 0]_8_expr.json  test_10_4_None_[9, 7, 1, 6, 5, 0, 8, 4, 3, 2]_3_arrays.json  test_10_4_None_[9, 7, 1, 6, 5, 0, 8, 4, 3, 2]_3_expr.json  test_10_4_None_[9, 7, 1, 6, 5, 0, 8, 4, 3, 2]_9_arrays.json  (+711 more)
test/src/: test_api.cpp  test_network.cpp  test_permutation.cpp
(+125 files in other folders)
