cabal-version:         2.4
name:                  lattice-symmetries-haskell
version:               0.1.0.0
synopsis:              See README for more info
description:           See README for more info
license:               BSD-3-Clause
license-file:          LICENSE
author:                Tom Westerhout
maintainer:            Tom Westerhout <14264576+twesterhout@users.noreply.github.com>
copyright:             2021 Tom Westerhout
category:              Math
build-type:            Simple
-- Custom
extra-doc-files:       README.md
                       CHANGELOG.md
tested-with:           GHC == 8.10.4
                       GHC == 8.10.7

flag use-standalone
  description: Use standalone option for foreign-library (requires GHC which was built with -fPIC support)
  manual: True
  default: False

-- custom-setup
--   setup-depends:       base, containers, Cabal, filepath

common common-options
  build-depends:       base >= 4.13.0.0
                     , relude

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ScopedTypeVariables
                       OverloadedStrings
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       TypeFamilies
                       DerivingVia
                       DeriveGeneric
                       DeriveAnyClass
                       StandaloneDeriving
                       GeneralizedNewtypeDeriving
                       TypeApplications
                       AllowAmbiguousTypes
                       DataKinds

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     LatticeSymmetries
                       LatticeSymmetries.Context
                       LatticeSymmetries.IO
                       LatticeSymmetries.Types
                       LatticeSymmetries.Sparse
                       LatticeSymmetries.ComplexRational
                       LatticeSymmetries.Parser
                       LatticeSymmetries.Algebra
                       LatticeSymmetries.Dense
                       LatticeSymmetries.CSR
                       LatticeSymmetries.Basis
                       LatticeSymmetries.BitString
                       LatticeSymmetries.NonbranchingTerm
                       LatticeSymmetries.Operator
                       LatticeSymmetries.Utils
  c-sources:           cbits/helpers.c
                       cbits/csr.c
                       cbits/reference.c
  cc-options:          -Wall -Wextra -Wpedantic
  include-dirs:        cbits
  build-depends:       vector
                     -- , binary
                     -- , vector-binary-instances
                     , exceptions
                     , safe-exceptions
                     -- , resourcet
                     -- , unliftio
                     , unliftio-core
                     , mtl
                     , vector
                     , vector-algorithms
                     , text
                     , aeson
                     , scientific
                     , yaml
                     -- , co-log
                     -- , co-log-core
                     -- , vector-algorithms
                     -- , deepseq
                     , parsec
                     , primitive
                     , ghc-prim
                     -- , mtl
                     -- , random >= 1.2.0
                     -- , mwc-random
                     -- , text
                     -- , ghc-dump-core
                     -- , ghc-dump-util
                     , containers
                     , template-haskell
                     , inline-c
                     -- , binary
                     -- , vector-binary-instances
                     , hdf5-hs
                     , ansi-wl-pprint
  pkgconfig-depends:   lattice_symmetries

foreign-library lattice_symmetries_haskell
  import:              common-options
  type:                native-shared
  if os(Windows) || os(darwin) || os(osx)
    options: standalone
  if os(linux) && flag(use-standalone)
    options: standalone
  --   mod-def-file: MyForeignLib.def
  hs-source-dirs:      lib
  other-modules:       ForeignLibrary
  -- MyForeignLib.SomeModule
  -- MyForeignLib.SomeOtherModule
  -- c-sources:           csrc/MyForeignLibWrapper.c
  build-depends:       lattice-symmetries-haskell

-- executable liblattice_symmetries_haskell.so
--   import:              common-options
--   hs-source-dirs:      lib
--   main-is:             ForeignLibrary.hs
--   build-depends:       lattice-symmetries-haskell
--   -- extra-libraries:     -- HSrts-ghc8.10.7
--                        -- HSghc-prim-0.6.1
--                        -- HSghc-boot-th-8.10.7
--   ghc-options:         -no-hs-main -fPIC -shared -threaded

-- executable ising-ground-state
--   import:              common-options
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       ising-glass-annealer
--                      , vector
--                      , hdf5-hs
--   ghc-options:         -threaded
--                        -rtsopts
--                        -with-rtsopts=-N
-- 
test-suite lattice-symmetries-haskell-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       lattice-symmetries-haskell
                     , hspec
                     , yaml
                     , vector
                     , parsec
                     -- , mwc-random
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
