cabal-version: 3.0
name:          lattice-symmetries-haskell
version:       2.2.0
synopsis:      See README for more info
description:   See README for more info
license:       BSD-3-Clause
license-file:  LICENSE
author:        Tom Westerhout
maintainer:
  Tom Westerhout <14264576+twesterhout@users.noreply.github.com>

copyright:     2021-2023 Tom Westerhout
category:      Math
build-type:    Simple

-- extra-doc-files: README.md
tested-with:   GHC ==9.6.1

flag no-standalone
  description:
    Don't use standalone option for foreign-library (it requires GHC which was built with -fPIC support)

  manual:      True
  default:     False

common common-options
  build-depends:
    , base    >=4.13.0.0 && <5
    , relude

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

  ghc-options:
    -W -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  default-language:   GHC2021 
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BinaryLiterals
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    ViewPatterns

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    LatticeSymmetries.Algebra
    LatticeSymmetries.Basis
    LatticeSymmetries.Benes
    LatticeSymmetries.BitString
    LatticeSymmetries.ComplexRational
    LatticeSymmetries.Context
    LatticeSymmetries.Conversion
    LatticeSymmetries.Dense
    LatticeSymmetries.Expr
    LatticeSymmetries.FFI
    LatticeSymmetries.Generator
    LatticeSymmetries.Group
    LatticeSymmetries.NonbranchingTerm
    LatticeSymmetries.Operator
    LatticeSymmetries.Parser
    LatticeSymmetries.Utils
    LatticeSymmetries.Yaml

  include-dirs:    cbits

  -- build-tool-depends:  hsc2hs:hsc2hs
  build-depends:
    , aeson               >=2
    , bytestring
    , constraints
    , containers
    , derive-storable
    , directory
    , inline-c
    , megaparsec
    , mtl
    , parser-combinators
    , prettyprinter       >=1.7
    , primitive
    , safe-exceptions
    , scientific
    , template-haskell
    , text
    , unliftio-core
    , vector
    , vector-algorithms
    , yaml

  -- , binary
  -- , vector-binary-instances
  -- , exceptions
  -- , co-log-core
  -- , vector-algorithms
  -- , deepseq
  -- , ghc-prim
  -- , mtl
  -- , random >= 1.2.0
  -- , mwc-random
  -- , text
  -- , ghc-dump-core
  -- , ghc-dump-util
  -- , template-haskell
  -- , inline-c
  -- , binary
  -- , vector-binary-instances
  -- , hdf5-hs
  -- , HaskellForMaths
  extra-libraries: kernels

  -- pkgconfig-depends:   lattice_symmetries
  -- c-sources:           kernels/indexing.c
  --                      kernels/reference.c
  -- kernels/kernels.c
  include-dirs:    cbits
  cc-options:
    -std=c11 -fPIC -O3 -DNDEBUG -Wall -Wextra -Wpedantic -Wconversion
    -Wdouble-promotion -Wformat=2 -Wformat-overflow=2 -Winit-self
    -Wimplicit-fallthrough -Wunused -Wuninitialized -Wstrict-overflow=2
    -Wduplicated-branches -Wfloat-equal -Wshadow -Wunused-macros
    -Wmissing-field-initializers -Wno-variadic-macros

  if (os(linux) && !flag(no-standalone))
    ghc-options: -fPIC -fexternal-dynamic-refs

-- foreign-library foo_bar
--   type:           native-shared
--   options: standalone
--   hs-source-dirs: lib
--   other-modules:  FooBar
--   default-language: GHC2021
--   build-depends:
--     , base

foreign-library lattice_symmetries_haskell
  import:         common-options
  type:           native-shared

  if ((os(windows) || os(osx)) || os(osx))
    options: standalone

  -- For some reason libffi is not linked properly
  if (os(osx) || os(osx))
    extra-libraries: ffi

  if (os(linux) && !flag(no-standalone))
    options: standalone

  --   mod-def-file: MyForeignLib.def
  hs-source-dirs: lib
  other-modules:
    ForeignLibrary
    HeaderFileGeneration

  c-sources:      cbits/init.c
  cc-options:     -fPIC -Wall -Wextra
  include-dirs:   cbits
  ghc-options:    -Wno-missing-signatures -threaded
  build-depends:
    , aeson
    , bytestring
    , containers
    , directory
    , filepath
    , lattice-symmetries-haskell
    , prettyprinter
    , safe-exceptions
    , split
    , template-haskell
    , text
    , vector

  buildable:      True

test-suite lattice-symmetries-haskell-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    LatticeSymmetries.BenesSpec
    LatticeSymmetries.BitStringSpec
    LatticeSymmetries.ComplexRationalSpec
    LatticeSymmetries.ConversionSpec
    LatticeSymmetries.DenseSpec
    LatticeSymmetries.GeneratorSpec
    LatticeSymmetries.GroupSpec
    LatticeSymmetries.NonbranchingTermSpec
    LatticeSymmetries.ParserSpec

  build-depends:
    , aeson
    , hspec
    , lattice-symmetries-haskell
    , megaparsec
    , prettyprinter
    , QuickCheck
    , text
    , vector
    , yaml

  -- , mwc-random
  ghc-options:    -Wno-orphans -threaded -rtsopts -with-rtsopts=-N
  buildable:      True
